Cleaned up response tagging